Develop/K3s/manifests/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agami-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agami-backend
  template:
    metadata:
      labels:
        app: agami-backend
    spec:
      nodeSelector:
        zone: backend
      containers:
      - name: backend
        image: agami-captcha.cloud:8443/agami/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: agami-backend-svc
  namespace: default
spec:
  selector:
    app: agami-backend
  ports:
    - port: 80
      targetPort: 8000
