Develop/K3s/manifests/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agami-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agami-frontend
  template:
    metadata:
      labels:
        app: agami-frontend
    spec:
      nodeSelector:
        zone: frontend
      containers:
      - name: frontend
        image: agami-captcha.cloud:8443/agami/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: agami-frontend-svc
  namespace: default
spec:
  selector:
    app: agami-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agami-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - agami-captcha.cloud
    secretName: agami-web-tls
  rules:
  - host: agami-captcha.cloud
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: agami-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agami-frontend-svc
            port:
              number: 80
